<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="typeacommand">Type a command</string>
    <string name="buttonTextXML">Try Command</string>
    <string name="tgButton"></string>
    <string name="invalidInput">Invalid</string>
    <string name="PassPromtText">Please enter your password</string>
    <string name="passpromtbutton">OK</string>
    
    <string name="contacts_add_contact_b_add_contact">Adauga contact!</string>
    <string name="contacts_add_contact_b_back">Inapoi</string>
    <string name="contacts_get_contact_info_b_informatii">Informatii</string>
    <string name="contacts_get_contact_info_b_editeaza">Editeaza</string>
    <string name="contacts_get_contact_info_b_inapoi">Inapoi</string>   
    <string name="contacts_get_contact_info_tv_nume">Nume:</string>   
    <string name="contacts_get_contact_info_tv_prenume">Prenume:</string>
    <string name="contacts_get_contact_info_tv_phone_nb_mobile">Nr. Mobil:</string>  
    <string name="contacts_get_contact_info_tv_phone_nb_home">Nr. Acasa:</string>  
    <string name="contacts_get_contact_info_tv_phone_nb_work">Nr. Munca:</string>   
    <string name="contacts_get_contact_info_tv_email">E-mail:</string>
    <string name="contacts_get_contact_info_tv_fax">Fax:</string>
    <string name="contacts_get_contact_info_tv_adresa">Adresa:</string>
    <string name="contacts_get_contact_info_tv_notes">Notite:</string>
    <string name="contacts_get_contact_info_tv_id_curent">Nr. Curent:</string>
    <string name="contacts_add_contact_info_tv_nume">Nume:</string>   
    <string name="contacts_add_contact_info_tv_prenume">Prenume:</string>
    <string name="contacts_add_contact_info_tv_phone_nb_mobile">Nr. Mobil:</string>  
    <string name="contacts_add_contact_info_tv_phone_nb_home">Nr. Acasa:</string>  
    <string name="contacts_add_contact_info_tv_phone_nb_work">Nr. Munca:</string>   
    <string name="contacts_add_contact_info_tv_email">E-mail:</string>
    <string name="contacts_add_contact_info_tv_fax">Fax:</string>
    <string name="contacts_add_contact_info_tv_adresa">Adresa:</string>
    <string name="contacts_add_contact_info_tv_notes">Notite:</string>  
    <string name="contacts_delete_contact_tv_contacte_existente">Contacte existente</string>
    <string name="contacts_delete_contact_tv_mesaj">Introduceti in casuta de mai jos ID-ul corespunzator contactului pe care doriti sa il stegeti.</string>
    <string name="contacts_delete_contact_tv_ID">ID:</string>
    <string name="contacts_delete_contact_b_sterge_contact">Sterge contact</string>
    <string name="contacts_delete_contact_b_inapoi">Inapoi</string> 
    <string name="contacts_view_contact_contacte_existente">Contacte existente</string>
    <string name="contacts_view_contact_contacte_inapoi">Inapoi</string>
    
    <string name="transport_utcluj_tv_distanta">Distanta</string>
    <string name="transport_utcluj_tv_durata">Durata</string>
    <string name="transport_utcluj_spinner_linia">Linia</string>
    <string name="transport_utcluj_spinner_35">35</string>
    <string name="transport_utcluj_spinner_43P">43P</string>
    <string name="transport_utcluj_spinner_25">25</string>
    <string name="transport_utcluj_spinner_102">102</string>
    <string name="transport_utcluj_tv_statiaSursa1">Sursa 1</string>
    <string name="transport_utcluj_tv_statiaDestinatie1">Destinatie 1</string>    
    <string name="transport_utcluj_tv_statiaSursa2">Sursa 2</string>
    <string name="transport_utcluj_tv_statiaDestinatie2">Destinatie 2</string> 
    <string name="transport_utcluj_rb_decurs_saptamana">Luni-Vineri</string>    
    <string name="transport_utcluj_rb_weekend">Sambata-Duminica</string>       
    
     <string-array name="transport_utcluj_spinner_linii">
        <item>@string/transport_utcluj_spinner_linia</item>
        <item>@string/transport_utcluj_spinner_35</item>
        <item>@string/transport_utcluj_spinner_43P</item>
        <item>@string/transport_utcluj_spinner_25</item>
        <item>@string/transport_utcluj_spinner_102</item>
    </string-array>
    
     <string-array name="memo_main_opt_listview">
        <item>@string/memo_main_lv_vezi_grupuri</item>
        <item>@string/memo_main_lv_vezi_memouri</item>
    </string-array>
    <string-array name="memo_modif_memo_prioritati_spinner">
        <item>@string/memo_modif_memo_spinner_prior_ridicata</item>
        <item>@string/memo_modif_memo_spinner_prior_medie</item>
        <item>@string/memo_modif_memo_spinner_prior_scazuta</item>
    </string-array>
    <string-array name="memo_modif_memo_grad_completare_spinner">
        <item>@string/memo_modif_memo_spinner_efectuat</item>
        <item>@string/memo_modif_memo_spinner_in_derulare</item>
    </string-array>
    <string name="memo_main_lv_vezi_grupuri">Vezi grupuri</string>
    <string name="memo_main_lv_vezi_memouri">Vezi memo-uri</string>
    <string name="memo_view_group_titlu">Grupuri</string>
    <string name="memo_view_group_actBar_adauga_grup">Adauga grup</string>
    <string name="memo_view_group_actBar_admin">Administreaza</string>
    <string name="memo_view_memo_titlu">Memo-uri</string>
    <string name="memo_view_memo_actBar_adauga_memo">Adauga memo</string>
    <string name="memo_view_memo_actBar_admin">Administreaza</string>
    <string name="memo_modif_group_titlu">Grup</string>
    <string name="memo_modif_group_tv_titlu_grup">Titlu grup</string>
    <string name="memo_modif_group_actBar_salveaza">Salveaza</string>
    <string name="memo_modif_group_actBar_renunta">Renunta</string>
    <string name="memo_mpdif_group_et_intr_titlu_gr">Introduceti titlu grup</string>
    <string name="memo_view_memo_detalii">Detalii memo</string>
    <string name="memo_modif_memo_memo">Memo</string>
    <string name="memo_modif_memo_tv_titlu_memo">Titlu memo</string>
    <string name="memo_modif_memo_et_intr_titlu_memo">Introduceti titlu memo</string>
    <string name="memo_modif_memo_tv_data">Data</string>
    <string name="memo_modif_memo_tv_notita_memo">Notite memo</string>
    <string name="memo_modif_memo_et_intr_note_memo">Introduceti notite memo</string>
    <string name="memo_modif_memo_tv_prioritate">Prioritate</string>
    <string name="memo_modif_memo_spinner_prior_ridicata">Ridicata</string>
    <string name="memo_modif_memo_spinner_prior_medie">Medie</string>
    <string name="memo_modif_memo_spinner_prior_scazuta">Scazuta</string>
    <string name="memo_modif_memo_tv_grup">Grup</string>
    <string name="memo_modif_memo_tv_statut">Statut</string>
    <string name="memo_modif_memo_spinner_efectuat">Efectuata</string>
    <string name="memo_modif_memo_spinner_in_derulare">In derulare</string>
    <string name="memo_modif_memo_actBar_salveaza">Salveaza</string>
    <string name="memo_modif_memo_actBar_renunta">Renunta</string>
    <string name="memo_modif_memo_diag_cancel_poz">Da</string>
    <string name="memo_modif_memo_diag_cancel_neg">Nu</string>
    <string name="memo_modif_memo_diag_tv_nu">Doriti sa renuntati?</string>
    <string name="memo_view_memo_detalii_actBar_renuntati">Doriti sa renuntati?</string>
    <string name="memo_view_memo_detalii_actBar_stergeMemo">Sterge memo</string>
    <string name="memo_view_memo_detalii_actBar_adaugaMemo">Adauga memo</string>
    <string name="memo_setting_notif">Permite notificari</string>
    <string name="memo_setting_actBar_salveaza">Salveaza</string>
    <string name="memo_setting_actBar_renunta">Renunta</string>
    <string name="setari">Setari</string>
    
</resources>