<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etComands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeacommand"
        android:password="true" />

    <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Bresults"
            android:layout_weight="25"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonTextXML" />

        <ToggleButton
            android:id="@+id/tbPassword"
            android:layout_weight="75"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tgButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invalidInput" />

</LinearLayout>