<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@drawable/contacts_delete_contact_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contacts_delete_contact_tv_contacte_existente"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="300dp" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/contacts_delete_contact_tv_SQLinfo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="20sp" />
        </HorizontalScrollView>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contacts_delete_contact_tv_mesaj" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/contacts_delete_contact_tv_ID" />

        <EditText
            android:id="@+id/contacts_delete_contact_et_RowNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/contacts_delete_contact_b_DeleteContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="65"
            android:text="@string/contacts_delete_contact_b_sterge_contact" />

        <Button
            android:id="@+id/contacts_delete_contact_b_Back_delete_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="35"
            android:text="@string/contacts_delete_contact_b_inapoi" />
    </LinearLayout>

</LinearLayout>