<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transport_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="37dp"
    android:orientation="horizontal" >

    <Spinner
        android:id="@+id/transport_utcluj_spinner_linii"
        android:layout_width="255dp"
        android:layout_height="match_parent"
        android:entries="@array/transport_utcluj_spinner_linii"
        android:gravity="right" />

    <ImageView
        android:id="@+id/transport_utcluj_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/transport_utcluj_tv_distanta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/transport_utcluj_tv_distanta" />

            <TextView
                android:id="@+id/transport_utcluj_tv_durata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="54.67"
                android:gravity="center"
                android:text="@string/transport_utcluj_tv_durata" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/transport_utcluj_tv_sursa1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/transport_utcluj_tv_statiaSursa1" />

            <TextView
                android:id="@+id/transport_utcluj_tv_sursa2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50.77"
                android:gravity="center"
                android:text="@string/transport_utcluj_tv_statiaSursa2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="L-V" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="S-D" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="L-V" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.21"
                android:gravity="center"
                android:text="S-D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="100"
            android:orientation="horizontal" >

            <ScrollView
                android:layout_width="80dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/transport_utcluj_tv_perechea1WeekDays"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:text="TextView" />
            </ScrollView>

            <ScrollView
                android:layout_width="40dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/transport_utcluj_tv_perechea1WeekendSambata"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="12"
                    android:gravity="center"
                    android:text="TextView" />
            </ScrollView>
            
            <ScrollView
                android:layout_width="40dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/transport_utcluj_tv_perechea1WeekendDuminica"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="12"
                    android:gravity="center"
                    android:text="TextView" />
            </ScrollView>

            <ScrollView
                android:layout_width="80dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/transport_utcluj_tv_perechea2WeekDays"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:text="TextView" />
            </ScrollView>

            <ScrollView
                android:layout_width="40dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/transport_utcluj_tv_perechea2WeekendSambata"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="12"
                    android:gravity="center"
                    android:text="TextView" />
            </ScrollView>
            <ScrollView
                android:layout_width="40dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/transport_utcluj_tv_perechea2WeekendDuminica"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="12"
                    android:gravity="center"
                    android:text="TextView" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/transport_utcluj_tv_dest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/transport_utcluj_tv_statiaDestinatie1" />

            <TextView
                android:id="@+id/transport_utcluj_tv_dest2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="49.04"
                android:gravity="center"
                android:text="@string/transport_utcluj_tv_statiaDestinatie2" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/transport_utcluj_meniu_principal"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Meniu Principal" />

</LinearLayout>